Avoid URL constructor and let the JVM do the conversion.